# MicroMusicPlayer

./: README.rst  index.html  params.json
MicroMusicPayer-2.0/: AUTHORS  ChangeLog  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac
MicroMusicPayer-2.0/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
MicroMusicPayer-2.0/mmp-2.0/: Assertions.c  Makefile.in  Resizer.cpp  Resizer.h  declarations.h  defines.h  dialogs.cpp  folder_parsing.cpp  generate_menu.cpp  global_vars.h  gui_configuration.cpp  includes.h  main.cpp  music_hooks.cpp  playing_controls_callback.cpp  shuffle.cpp  structures.h  view_playlist.cpp
MicroMusicPayer-2.0/mmp-2.0/Desktop/: MicroMusicPlayer.desktop
MicroMusicPayer-2.0/mmp-2.0/README/doctrees/: README.doctree  environment.pickle
MicroMusicPayer-2.0/mmp-2.0/README/doctrees/README/: README.doctree
MicroMusicPayer-2.0/mmp-2.0/README/singlehtml/: README.html  objects.inv
MicroMusicPlayer-2.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.mk  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
MicroMusicPlayer-2.1/data/: Makefile.am  Makefile.in
MicroMusicPlayer-2.1/data/README/: index.html  objects.inv  search.html  searchindex.js
MicroMusicPlayer-2.1/data/README/README/: README.html
MicroMusicPlayer-2.1/data/README/_sources/: index.txt
MicroMusicPlayer-2.1/data/README/_sources/README/: README.txt
MicroMusicPlayer-2.1/desktop/: Makefile.am  Makefile.in
MicroMusicPlayer-2.1/man/: Makefile.am  Makefile.in  mmp.1
MicroMusicPlayer-2.1/source/: Makefile.am  Makefile.in  Resizer.cpp  defines.h  dialogs.cpp  dialogs.h  folder_parsing.cpp  folder_parsing.h  generate_menu.cpp  generate_menu.h  global_vars.cpp  global_vars.h  gui_configuration.cpp  gui_configuration.h  includes.h  main.cpp  main.h  music_hooks.cpp  music_hooks.h  playing_controls_callback.cpp  playing_controls_callback.h  shuffle.cpp  shuffle.h  structures.h  view_playlist.cpp  view_playlist.h
MicroMusicPlayer-2.1/texi/: Makefile.am  Makefile.in  mmp.texi
MicroMusicPlayer-3.0/: ChangeLog  Makefile.am  Makefile.in  Makefile.mk  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
MicroMusicPlayer-3.0/data/: Makefile.am  Makefile.in
MicroMusicPlayer-3.0/data/Configuration/: menus.ui
MicroMusicPlayer-3.0/data/README/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
MicroMusicPlayer-3.0/data/README/README/: README.html
MicroMusicPlayer-3.0/data/README/_sources/: index.txt
MicroMusicPlayer-3.0/data/README/_sources/README/: README.txt
MicroMusicPlayer-3.0/data/doc/: MicroMusicPlayer.html
MicroMusicPlayer-3.0/data/images/icons/high-contrast/: README
MicroMusicPlayer-3.0/data/images/icons/oxygen/: README
MicroMusicPlayer-3.0/desktop/: Makefile.am  Makefile.in
MicroMusicPlayer-3.0/man/: Makefile.am  Makefile.in  MicroMusicPlayer.1  mmp.1
MicroMusicPlayer-3.0/source/: Makefile  Makefile.am  Makefile.in  Resizer.cpp  Resizer.h  defines.h  dialogs.cpp  dialogs.h  folder_parsing.cpp  folder_parsing.h  generate_menu.cpp  global_vars.cpp  global_vars.h  gui_configuration.cpp  gui_configuration.h  includes.h  main.cpp  main.h  music_hooks.cpp  music_hooks.h  other_callbacks.cpp  other_callbacks.h  playing_controls_callback.cpp  playing_controls_callback.h  shuffle.cpp  structures.h  view_playlist.cpp  view_playlist.h
MicroMusicPlayer-3.0/texi/: Makefile.am  Makefile.in  MicroMusicPlayer.info  mmp.texi
