
nobase_dist_pkgdata_DATA   = images/icons/high-contrast/16x16/*.png     \
                             images/icons/high-contrast/22x22/*.png     \
                             images/icons/oxygen/16x16/*.png            \
                             images/icons/oxygen/22x22/*.png            \
                             images/images/*.png                        \
                             License/*.txt                              \
                             README/*.html                              \
                             README/*.inv                               \
                             README/*.js                                \
                             README/README/*.html                       \
                             README/_sources/*.txt                      \
                             README/_sources/README/*.txt               \
                             README/_static/*.gif                       \
                             README/_static/*.css                       \
                             README/_static/*.png                       \
                             README/_static/*.js                        \
                             README/_static/*.ico
                             