
nobase_dist_pkgdata_DATA   =  ./images/images/Micro_Music_Player.png \
                              ./images/images/Micro_Music_Player_320.png \
                              ./images/images/preferences-desktop-sound.png \
                              ./images/images/Micro_Music_Player_256.png \
                              ./images/images/Micro_Music_Player_288.png \
                              ./images/images/mmp-icon.ico \
                              ./images/icons/high-contrast/22x22/interface-little.png \
                              ./images/icons/high-contrast/22x22/media-playlist-shuffle.png \
                              ./images/icons/high-contrast/22x22/weather-clear-night.png \
                              ./images/icons/high-contrast/22x22/audio-volume-high.png \
                              ./images/icons/high-contrast/22x22/media-record.png \
                              ./images/icons/high-contrast/22x22/face-smile-big.png \
                              ./images/icons/high-contrast/22x22/media-skip-forward.png \
                              ./images/icons/high-contrast/22x22/audio-volume-medium.png \
                              ./images/icons/high-contrast/22x22/window-minimize.png \
                              ./images/icons/high-contrast/22x22/media-seek-backward.png \
                              ./images/icons/high-contrast/22x22/media-skip-backward.png \
                              ./images/icons/high-contrast/22x22/media-playlist-repeat.png \
                              ./images/icons/high-contrast/22x22/weather-clear.png \
                              ./images/icons/high-contrast/22x22/media-playback-pause.png \
                              ./images/icons/high-contrast/22x22/audio-volume-low.png \
                              ./images/icons/high-contrast/22x22/interface-middle.png \
                              ./images/icons/high-contrast/22x22/audio-volume-muted.png \
                              ./images/icons/high-contrast/22x22/media-seek-forward.png \
                              ./images/icons/high-contrast/22x22/multimedia-player.png \
                              ./images/icons/high-contrast/22x22/preferences-system.png \
                              ./images/icons/high-contrast/22x22/user-offline.png \
                              ./images/icons/high-contrast/22x22/interface-big.png \
                              ./images/icons/high-contrast/22x22/media-playback-start.png \
                              ./images/icons/high-contrast/22x22/dialog-close.png \
                              ./images/icons/high-contrast/22x22/face-angel.png \
                              ./images/icons/high-contrast/22x22/applications-multimedia.png \
                              ./images/icons/high-contrast/22x22/media-playlist-repeat-song.png \
                              ./images/icons/high-contrast/22x22/face-angry.png \
                              ./images/icons/high-contrast/22x22/face-devilish.png \
                              ./images/icons/high-contrast/22x22/media-playback-stop.png \
                              ./images/icons/high-contrast/22x22/dialog-ok.png \
                              ./images/icons/high-contrast/16x16/media-playlist-shuffle.png \
                              ./images/icons/high-contrast/16x16/face-raspberry.png \
                              ./images/icons/high-contrast/16x16/document-open-recent.png \
                              ./images/icons/high-contrast/16x16/audio-volume-high.png \
                              ./images/icons/high-contrast/16x16/face-sad.png \
                              ./images/icons/high-contrast/16x16/document-readme.png \
                              ./images/icons/high-contrast/16x16/media-skip-forward.png \
                              ./images/icons/high-contrast/16x16/audio-volume-medium.png \
                              ./images/icons/high-contrast/16x16/window-minimize.png \
                              ./images/icons/high-contrast/16x16/media-seek-backward.png \
                              ./images/icons/high-contrast/16x16/media-skip-backward.png \
                              ./images/icons/high-contrast/16x16/media-playlist-repeat.png \
                              ./images/icons/high-contrast/16x16/media-playback-pause.png \
                              ./images/icons/high-contrast/16x16/folder-sound.png \
                              ./images/icons/high-contrast/16x16/audio-volume-low.png \
                              ./images/icons/high-contrast/16x16/audio-volume-muted.png \
                              ./images/icons/high-contrast/16x16/main-configuration.png \
                              ./images/icons/high-contrast/16x16/media-seek-forward.png \
                              ./images/icons/high-contrast/16x16/multimedia-player.png \
                              ./images/icons/high-contrast/16x16/preferences-system.png \
                              ./images/icons/high-contrast/16x16/user-offline.png \
                              ./images/icons/high-contrast/16x16/media-playback-start.png \
                              ./images/icons/high-contrast/16x16/dialog-about.png \
                              ./images/icons/high-contrast/16x16/folder-music.png \
                              ./images/icons/high-contrast/16x16/system-file-manager.png \
                              ./images/icons/high-contrast/16x16/media-optical-audio.png \
                              ./images/icons/high-contrast/16x16/applications-multimedia.png \
                              ./images/icons/high-contrast/16x16/media-playlist-repeat-song.png \
                              ./images/icons/high-contrast/16x16/user-info.png \
                              ./images/icons/high-contrast/16x16/preferences-desktop-display.png \
                              ./images/icons/high-contrast/16x16/system-shutdown.png \
                              ./images/icons/high-contrast/16x16/media-playback-stop.png \
                              ./images/icons/high-contrast/README \
                              ./images/icons/oxygen/22x22/interface-little.png \
                              ./images/icons/oxygen/22x22/media-playlist-shuffle.png \
                              ./images/icons/oxygen/22x22/weather-clear-night.png \
                              ./images/icons/oxygen/22x22/audio-volume-high.png \
                              ./images/icons/oxygen/22x22/face-smile-big.png \
                              ./images/icons/oxygen/22x22/media-skip-forward.png \
                              ./images/icons/oxygen/22x22/audio-volume-medium.png \
                              ./images/icons/oxygen/22x22/window-minimize.png \
                              ./images/icons/oxygen/22x22/media-seek-backward.png \
                              ./images/icons/oxygen/22x22/media-skip-backward.png \
                              ./images/icons/oxygen/22x22/media-playlist-repeat.png \
                              ./images/icons/oxygen/22x22/weather-clear.png \
                              ./images/icons/oxygen/22x22/media-playback-pause.png \
                              ./images/icons/oxygen/22x22/audio-volume-low.png \
                              ./images/icons/oxygen/22x22/interface-middle.png \
                              ./images/icons/oxygen/22x22/audio-volume-muted.png \
                              ./images/icons/oxygen/22x22/media-seek-forward.png \
                              ./images/icons/oxygen/22x22/multimedia-player.png \
                              ./images/icons/oxygen/22x22/preferences-system.png \
                              ./images/icons/oxygen/22x22/user-offline.png \
                              ./images/icons/oxygen/22x22/interface-big.png \
                              ./images/icons/oxygen/22x22/media-playback-start.png \
                              ./images/icons/oxygen/22x22/dialog-close.png \
                              ./images/icons/oxygen/22x22/face-angel.png \
                              ./images/icons/oxygen/22x22/applications-multimedia.png \
                              ./images/icons/oxygen/22x22/media-playlist-repeat-song.png \
                              ./images/icons/oxygen/22x22/face-angry.png \
                              ./images/icons/oxygen/22x22/face-devilish.png \
                              ./images/icons/oxygen/22x22/media-playback-stop.png \
                              ./images/icons/oxygen/22x22/dialog-ok.png \
                              ./images/icons/oxygen/oxygen-icons5/metainfo.yaml \
                              ./images/icons/oxygen/oxygen-icons5/AUTHORS \
                              ./images/icons/oxygen/oxygen-icons5/CONTRIBUTING \
                              ./images/icons/oxygen/oxygen-icons5/COPYING \
                              ./images/icons/oxygen/oxygen-icons5/README.md \
                              ./images/icons/oxygen/oxygen-icons5/COPYING.LIB \
                              ./images/icons/oxygen/16x16/media-playlist-shuffle.png \
                              ./images/icons/oxygen/16x16/face-raspberry.png \
                              ./images/icons/oxygen/16x16/document-open-recent.png \
                              ./images/icons/oxygen/16x16/audio-volume-high.png \
                              ./images/icons/oxygen/16x16/media-record.png \
                              ./images/icons/oxygen/16x16/face-sad.png \
                              ./images/icons/oxygen/16x16/document-readme.png \
                              ./images/icons/oxygen/16x16/media-skip-forward.png \
                              ./images/icons/oxygen/16x16/audio-volume-medium.png \
                              ./images/icons/oxygen/16x16/window-minimize.png \
                              ./images/icons/oxygen/16x16/media-seek-backward.png \
                              ./images/icons/oxygen/16x16/media-skip-backward.png \
                              ./images/icons/oxygen/16x16/media-playlist-repeat.png \
                              ./images/icons/oxygen/16x16/media-playback-pause.png \
                              ./images/icons/oxygen/16x16/folder-sound.png \
                              ./images/icons/oxygen/16x16/audio-volume-low.png \
                              ./images/icons/oxygen/16x16/audio-volume-muted.png \
                              ./images/icons/oxygen/16x16/main-configuration.png \
                              ./images/icons/oxygen/16x16/media-seek-forward.png \
                              ./images/icons/oxygen/16x16/multimedia-player.png \
                              ./images/icons/oxygen/16x16/preferences-system.png \
                              ./images/icons/oxygen/16x16/user-offline.png \
                              ./images/icons/oxygen/16x16/media-playback-start.png \
                              ./images/icons/oxygen/16x16/dialog-about.png \
                              ./images/icons/oxygen/16x16/list-remove.png \
                              ./images/icons/oxygen/16x16/folder-music.png \
                              ./images/icons/oxygen/16x16/system-file-manager.png \
                              ./images/icons/oxygen/16x16/media-optical-audio.png \
                              ./images/icons/oxygen/16x16/applications-multimedia.png \
                              ./images/icons/oxygen/16x16/media-playlist-repeat-song.png \
                              ./images/icons/oxygen/16x16/user-info.png \
                              ./images/icons/oxygen/16x16/preferences-desktop-display.png \
                              ./images/icons/oxygen/16x16/system-shutdown.png \
                              ./images/icons/oxygen/16x16/media-playback-stop.png \
                              ./images/icons/oxygen/README \
                              ./images/icons/oxygen/AUTHORS \
                              ./images/icons/oxygen/CONTRIBUTING \
                              ./images/icons/oxygen/COPYING \
                              ./images/icons/oxygen/COPYING.LIB \
                              ./images/icons/oxygen/garton-redux/AUTHORS \
                              ./images/icons/oxygen/garton-redux/COPYING \
                              ./images/icons/oxygen/garton-redux/GPLv2.txt \
                              ./README/_sources/README/README.txt \
                              ./README/_sources/index.txt \
                              ./README/objects.inv \
                              ./README/search.html \
                              ./README/_static/basic.css \
                              ./README/_static/Micro_Music_Player.png \
                              ./README/_static/minus.png \
                              ./README/_static/comment-close.png \
                              ./README/_static/favicon.ico \
                              ./README/_static/websupport.js \
                              ./README/_static/down.png \
                              ./README/_static/up.png \
                              ./README/_static/comment-bright.png \
                              ./README/_static/ajax-loader.gif \
                              ./README/_static/jquery-1.11.1.js \
                              ./README/_static/comment.png \
                              ./README/_static/up-pressed.png \
                              ./README/_static/plus.png \
                              ./README/_static/searchtools.js \
                              ./README/_static/file.png \
                              ./README/_static/underscore-1.3.1.js \
                              ./README/_static/nature.css \
                              ./README/_static/pygments.css \
                              ./README/_static/underscore.js \
                              ./README/_static/jquery.js \
                              ./README/_static/doctools.js \
                              ./README/_static/down-pressed.png \
                              ./README/README/README.html \
                              ./README/searchindex.js \
                              ./README/index.html \
                              ./README/.buildinfo \
                              ./Configuration/menus.ui \
                              ./doc/MicroMusicPlayer.html \
                              ./doc/MicroMusicPlayer.pdf

                            